--- a/_includes/footer-logos.html
+++ b/_includes/footer-logos.html
@@ -1,5 +1,21 @@
 <footer class="footer normal js-footer">
     <nav class="row">
+        <ul class="rt">
+            {% for f in site.data.footer-nav %}
+                <li>
+                    <a  
+                        {% if f.internal %}
+                        href="{{ f.url | prepend: site.baseurl }}" 
+                        {% else %}
+                        href="{{ f.url }}" 
+                        {% endif %}
+                        title="{{ f.title }}">
+                        {{ f.title }}
+                    </a>
+
+                </li>
+            {% endfor %}
+        </ul>
         <ul class="logos">
             {% for f in site.data.footer %}
             <li id="{{ f.id }}">
@@ -7,6 +23,10 @@
             </li>
             {% endfor %}
         </ul>
+        <p class="disclaimer">
+            The project is co-financed by Greece and the European Union
+        </p>
+
     </nav>
 </footer>
 
