--- a/static/sass/_content.scss
+++ b/static/sass/_content.scss
@@ -5,9 +5,9 @@ a:hover             { text-decoration: underline;}
 h1 { 
     text-transform: uppercase;
     text-align: center;
-    margin:80px 0; 
+    margin:60px 0; 
     line-height:120%;
-    color: $primary-color;
+    //color: $primary-color;
 }
 
 .subnav {
@@ -286,4 +286,52 @@ header {
 
 .footer {
     border-top: 1px solid $border-color;
+}
+
+
+.post {
+    margin-bottom: 3em;
+    .author {
+        font-size: emCalc(14px);
+        margin-bottom: 0em;
+        color: lighten($body-font-color, 15%);
+    }
+    h3 {
+        margin-bottom: 1em;
+        font-size: emCalc(18px);
+    }
+    h2 {
+        margin: -6px 0 0.5em;
+        font-size: emCalc(24px);
+        &+.author {
+            margin-bottom: 1em;
+        }
+    }
+    p {
+        margin-bottom: 1em;
+    }
+    .more {
+        white-space: nowrap;
+    }
+}
+
+.sidemenu {
+    ul {
+        margin-left: 0;
+        li {
+            &.active {
+                a {
+                    color: #000;
+                }
+            }
+            list-style: none outside none;
+            padding: 0 0 10px 0;
+            .date {
+                font-size: emCalc(14px);
+                margin-bottom: 0em;
+                color: lighten($body-font-color, 15%);
+            }
+        }
+    }
+
 }
