--- a/_includes/post-excerpt.html
+++ b/_includes/post-excerpt.html
@@ -3,9 +3,10 @@
         <span class="date">{{ post.date | date_to_long_string }}</span>
     </p>
     <h3><a href="{{ post.url | prepend: site.baseurl}}">{{ post.title }}</a></h3>
-
-    {{ post.content | split:'<!--break-->' | first }}
-    {% if post.content contains '<!--break-->' %}
-        <a href="{{ post.url | prepend: site.baseurl}}" class="more"> Read more...</a>
-    {% endif %}
+    <div class="post-content">
+        {{ post.content | split:'<!--break-->' | first }}
+        {% if post.content contains '<!--break-->' %}
+            <a href="{{ post.url | prepend: site.baseurl}}" class="more"> Read more...</a>
+        {% endif %}
+    </div>
 </div>
