--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ permalink: /blog/
     <span class="date">Posted on {{ page.date | date_to_long_string }}<br> by {{page.author}}</span>
 </p>
 <p id="post-meta">{{ tags_content }}</p>
-
-{{ content }}
-
+<div class="post-content">
+    {{ content }}
+</div>
 <p><a href="{{site.baseurl}}/blog" class="button">Back to posts</a></p>
