Use lightbox to preview images
Js/css/image files from https://github.com/lokesh/lightbox2

--- a/static/sass/_content.scss
+++ b/static/sass/_content.scss
@@ -251,7 +251,8 @@ pre     {
     text-align: center;
 }
 
-.screenshot-links a {
+a[data-lightbox]{
+
     position: relative;
     display:block;
     cursor: default;
@@ -267,7 +268,8 @@ pre     {
         background:url(../images/eye.png) no-repeat center center;
     }
 }
-.screenshot-links a:hover{
+
+a[data-lightbox]:hover{
     @media #{$small}{ 
         cursor: pointer;
         span {
