--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,7 @@
 	<script src="{{ "/static/javascripts/vendor/custom.modernizr.js" | prepend: site.baseurl }}"></script>			 
 	<script src="{{ "/static/javascripts/vendor/jquery.js" | prepend: site.baseurl }}"></script>			 
 	<script src="{{ "/static/javascripts/retina.js" | prepend: site.baseurl }}"></script>			 
+	<script src="{{ "/static/javascripts/lightbox.min.js" | prepend: site.baseurl}}"></script> 
 	<script src="{{ "/static/javascripts/common.js" | prepend: site.baseurl}}"></script>			 
 
  <script type="text/javascript">
