Add previous/next link to posts

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -40,7 +40,7 @@ layoutCls: x-wide
     </div>
       
     <div class="small-4 columns sidemenu">
-        <p><strong>All Posts</strong></p>
+        <p><strong><a href="{{site.baseurl}}/blog/">All Posts</a></strong></p>
         <ul>
         {% for post in site.posts %}
             {% if page.url == post.url%}
