--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,4 +11,14 @@ permalink: /blog/
 <div class="post-content">
     {{ content }}
 </div>
-<p><a href="{{site.baseurl}}/blog" class="button">Back to posts</a></p>
+<p class="prev-next clearfix">
+    {% if page.previous %}
+    <a href="{{page.previous.url}}" title="{{page.previous.title}}" class="lt-post">« Previous post</a>
+    {% endif %}
+
+    <a href="{{site.baseurl}}/blog">All posts</a>
+
+    {% if page.next %}
+    <a href="{{page.next.url}}" class="rt-post" title="{{page.next.title}}">Next post »</a>
+    {% endif %}
+</p>
