--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,7 @@
                 </a>
             </li>
             {% endfor %}
+            <li>{% include rss.html %}</li>
         </ul>
     </nav>
 </footer>
