--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,8 @@
      <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin,greek-ext,greek' rel='stylesheet' type='text/css'>
-
+    <link rel="alternate" type="application/atom+xml" href="{{ '/atom.xml' | prepend: site.baseurl }}" title="Atom feed">
+   
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ '/static/stylesheets/main.css' | prepend: site.baseurl }}">
 
