--- a/static/sass/_layout.scss
+++ b/static/sass/_layout.scss
@@ -14,3 +14,10 @@
 .x-wide {
     max-width: $x-wide-row-width;
 }
+
+
+@media #{$small-only} { 
+    .small-hide {
+        display: none;
+    }
+}
