--- a/static/sass/_content.scss
+++ b/static/sass/_content.scss
@@ -378,6 +378,9 @@ header {
             h2 {
                 margin-bottom: 1em;
             }
+            .img-wrap {
+                text-align: center;
+            }
             img {
                 margin: 0 0 1em;
                 @media #{$medium-up} { 
