--- a/static/sass/_content.scss
+++ b/static/sass/_content.scss
@@ -5,9 +5,8 @@ a:hover             { text-decoration: underline;}
 h1 { 
     text-transform: uppercase;
     text-align: center;
-    margin:60px 0; 
+    padding: 60px 0; 
     line-height:120%;
-    //color: $primary-color;
 }
 
 .subnav {
