--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
    
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ '/static/stylesheets/main.css' | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ '/static/font-awesome-4.4.0/css/font-awesome.min.css' | prepend: site.baseurl }}">
 
 
 </head>
