Use font-awesome instead of svgs

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,9 +20,9 @@
                     {% endfor %}
                     {% if page.social %}
                     <li class="social">
-                        <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" class="icons icon-twitter" title="Follow Synnefo on twitter"><span>twitter</span></a>
-                        <a href="https://plus.google.com/{{ site.google_id }}" target="_blank" class="icons icon-google" title="Synnefo on Google+"><span>google</span></a>
-                        <a href="https://github.com/{{ site.github_repo }}" target="_blank" class="icons icon-github" title="Fork Synnefo on Github"><span>github</span></a>
+                        <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" title="Follow Synnefo on twitter"><i class="fa fa-twitter fa-fw fa-lg"></i></a>
+                        <a href="https://plus.google.com/{{ site.google_id }}" target="_blank" title="Synnefo on Google+"><i class="fa fa-google-plus fa-fw"></i></a>
+                        <a href="https://github.com/{{ site.github_repo }}" target="_blank" title="Fork Synnefo on Github"><i class="fa fa-github fa-fw fa-lg"></i></a>
                     </li>
                     {% else %}
 
