--- a/_includes/rss.html
+++ b/_includes/rss.html
@@ -1,1 +1,1 @@
-<a href="{{ '/atom.xml' | prepend: site.baseurl }}" title="{{site.title}} RSS Feed"><img src="{{ '/static/images/rss-icon.png' | prepend: site.baseurl}}" alt="RSS feed"></a>
+<a href="{{ '/atom.xml' | prepend: site.baseurl }}" title="{{site.title}} RSS Feed" class="rss"><i class="fa fa-rss fa-lg"></i></a>
