Xmas: Add Xmas synnefo logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     	<nav class="top-bar js-top-nav" data-topbar>
             <ul class="title-area">
                 <li class="name">
-                    <a href="{{ site.baseurl }}/"><img src="{{ "/assets/synnefo-logo.png" | prepend: site.baseurl }}" alt="{{ site.title }}"></a>
+                    <a href="{{ site.baseurl }}/"><img src="{{ "/assets/synnefo-logo-xmas.png" | prepend: site.baseurl }}" alt="{{ site.title }}"></a>
                 </li>
                  <li class="toggle-topbar menu-icon"><a href="#"><span>&nbsp;</span></a></li>
             </ul>
